--- a/scripts/shiny_t-size_process-plot-inputs.Rmd
+++ b/scripts/shiny_t-size_process-plot-inputs.Rmd
@@ -41,6 +41,8 @@ calcTumorVol <- function(tmp){
 ```
 
 ```{r}
+zero.vals <- c("n/a", "N/A")
+
 mim1 <- tsize.raw[[1]] %>%
   drop_na(`tumor.length.(mm)`) %>%
   mutate(condition = dplyr::if_else(grepl("v3", microbiome.sample),
@@ -51,7 +53,8 @@ mim1 <- tsize.raw[[1]] %>%
 
 mim2 <- tsize.raw[[2]] %>%
   drop_na(`tumor.length.(mm)`) %>%
-  filter(`tumor.length.(mm)` != "N/A") %>%
+  mutate(`tumor.length.(mm)` =ifelse(`tumor.length.(mm)` %in% zero.vals, 0, `tumor.length.(mm)`),
+         `tumor.width.(mm)` = ifelse(`tumor.width.(mm)` %in% zero.vals, 0, `tumor.width.(mm)`)) %>%
   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
          treatment.group = paste(gsub(".-(.*)", "\\1", `cage (treatment)`),
@@ -61,19 +64,22 @@ mim2 <- tsize.raw[[2]] %>%
 # Problem: need to split mouse ids by cage
 mim3 <- tsize.raw[[3]] %>%
   drop_na(`tumor.length.(mm)`) %>%
-  filter(`tumor.length.(mm)` != "n/a" & `tumor.length.(mm)` != "not present") %>%
+  filter(`tumor.length.(mm)` != "not present") %>%
+  mutate(`tumor.length.(mm)` =ifelse(`tumor.length.(mm)` %in% zero.vals, 0, `tumor.length.(mm)`),
+         `tumor.width.(mm)` = ifelse(`tumor.width.(mm)` %in% zero.vals, 0, `tumor.width.(mm)`)) %>%
   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
-         condition = ifelse(is.na(microbiome.sample), "mimic3.Control", "Fitness:DL017"),
+         condition =  "Fitness:DL017",
          treatment = ifelse(grepl("1$", `cage (treatment)`), "IgG",
                             ifelse(grepl("2$", `cage (treatment)`), "IgG", "PD1")),
          treatment.group = paste(treatment, condition, sep = " x ")) %>%
   mutate(tail.number = paste0(tail.number, `cage (treatment)`)) %>%
   calcTumorVol()
 
-mim4 <- tsize.raw[[4]] %>%
-  drop_na(`tumor.length.(mm)`) 
-  filter(`tumor.length.(mm)` != "N/A") %>%
+mim4 <- tsize.raw[[4]] 
+  drop_na(`tumor.length.(mm)`) %>%
+  mutate(`tumor.length.(mm)` =ifelse(`tumor.length.(mm)` %in% zero.vals, 0, `tumor.length(mm)`),
+         `tumor.width(mm)` = ifelse(`tumor.width(mm)` %in% zero.vals, 0, `tumor.width(mm)`)) %>%
   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
          treatment.group = paste(gsub("(.*)-.", "\\1", `cage (treatment)`),
